parser/tests/bad/stmt06.st
% expressions in 'put' statement cannot have type 'array'

var arr: array 1..2 of int
put 1, "s", arr
